[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/resources/Themes.tres" type="Theme" id=1]
[ext_resource path="res://src/utilities/InputText.gd" type="Script" id=2]
[ext_resource path="res://src/resources/icon.png" type="Texture" id=3]

[node name="InputText" type="HBoxContainer"]
margin_right = 362.0
margin_bottom = 28.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_constants/separation = 0
script = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_right = 342.0
margin_bottom = 28.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Popup" type="PopupMenu" parent="LineEdit"]
margin_right = 140.0
margin_bottom = 131.0
focus_mode = 0

[node name="Button" type="Button" parent="."]
margin_left = 342.0
margin_right = 362.0
margin_bottom = 28.0
rect_min_size = Vector2( 20, 0 )
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="index_pressed" from="LineEdit/Popup" to="." method="_on_Popup_index_pressed"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
